Fix javadoc generation issue with Windows directory separators